--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h2>Card Validator</h2>
+    <form action="" method="get">
+        <input type="text" id="cardNumber" name="cardNumber">
+        <input type="submit">
+    </form>
     <h4>Card Number: {{cardNumber}}</h4>
     <h4>Issuer: {{result}}</h4>
 </body>
